[gd_scene load_steps=24 format=3 uid="uid://7cnea6eco0yx"]

[ext_resource type="Script" path="res://Player/Player.gd" id="1_qkkx7"]
[ext_resource type="Texture2D" uid="uid://dsh81uw70og16" path="res://Player/Sprites/Dude.png" id="2_oj6ru"]
[ext_resource type="Script" path="res://Player/BornEffect.gd" id="3_wsc61"]
[ext_resource type="Texture2D" uid="uid://bql1kexcjon03" path="res://Player/Appearing (96x96).png" id="4_kgs0k"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d3qmd"]
size = Vector2(17, 21)

[sub_resource type="Animation" id="Animation_7s84r"]
resource_name = "DoubleJump"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [24, 25, 26, 27, 28, 29]
}

[sub_resource type="Animation" id="Animation_jnagh"]
resource_name = "Fall"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [30]
}

[sub_resource type="Animation" id="Animation_a5d2c"]
resource_name = "Idle"
length = 1.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10]
}

[sub_resource type="Animation" id="Animation_oxtib"]
resource_name = "Jump"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [23]
}

[sub_resource type="Animation" id="Animation_e7mq4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_h87mf"]
resource_name = "Run"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22]
}

[sub_resource type="Animation" id="Animation_mxnaa"]
resource_name = "WallJump"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [31, 32, 33, 34, 35]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_yuldw"]
_data = {
"DOUBLEJUMP": SubResource("Animation_7s84r"),
"FALL": SubResource("Animation_jnagh"),
"IDLE": SubResource("Animation_a5d2c"),
"JUMP": SubResource("Animation_oxtib"),
"RESET": SubResource("Animation_e7mq4"),
"RUN": SubResource("Animation_h87mf"),
"WALLJUMP": SubResource("Animation_mxnaa")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_j65qa"]
radius = 9.0
height = 24.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_57y1y"]
size = Vector2(15, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_8bou4"]
atlas = ExtResource("4_kgs0k")
region = Rect2(0, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_er42x"]
atlas = ExtResource("4_kgs0k")
region = Rect2(96, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_5u2lh"]
atlas = ExtResource("4_kgs0k")
region = Rect2(192, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_s7gd8"]
atlas = ExtResource("4_kgs0k")
region = Rect2(288, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_e8jal"]
atlas = ExtResource("4_kgs0k")
region = Rect2(384, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_qaduf"]
atlas = ExtResource("4_kgs0k")
region = Rect2(480, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_jevgg"]
atlas = ExtResource("4_kgs0k")
region = Rect2(576, 0, 96, 96)

[sub_resource type="SpriteFrames" id="SpriteFrames_tunn6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8bou4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_er42x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5u2lh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s7gd8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e8jal")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qaduf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jevgg")
}],
"loop": false,
"name": &"default",
"speed": 7.0
}]

[node name="Player" type="CharacterBody2D"]
position = Vector2(98, 161)
collision_layer = 2
script = ExtResource("1_qkkx7")

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("2_oj6ru")
hframes = 7
vframes = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 5.5)
shape = SubResource("RectangleShape2D_d3qmd")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_yuldw")
}

[node name="PlayerHurtBox" type="Area2D" parent="."]
position = Vector2(0, 4)
collision_layer = 4
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerHurtBox"]
position = Vector2(1, 0)
shape = SubResource("CapsuleShape2D_j65qa")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[node name="Foot" type="Area2D" parent="."]
collision_layer = 512
collision_mask = 256

[node name="CollisionShape2D" type="CollisionShape2D" parent="Foot"]
position = Vector2(0.5, 6)
shape = SubResource("RectangleShape2D_57y1y")

[node name="BornEffect" type="Node2D" parent="."]
script = ExtResource("3_wsc61")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="BornEffect"]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="BornEffect"]
sprite_frames = SubResource("SpriteFrames_tunn6")
autoplay = "default"

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="area_entered" from="PlayerHurtBox" to="." method="_on_player_hurt_box_area_entered"]
[connection signal="body_entered" from="PlayerHurtBox" to="." method="_on_player_hurt_box_body_entered"]
[connection signal="area_entered" from="Foot" to="." method="_on_foot_area_entered"]
[connection signal="tree_entered" from="BornEffect" to="BornEffect" method="_on_tree_entered"]
[connection signal="animation_finished" from="BornEffect/AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="animation_finished" from="BornEffect/AnimatedSprite2D" to="BornEffect" method="_on_animated_sprite_2d_animation_finished"]
